2010-07-16 Oliver Klee  <typo3-coding@oliverklee.de>

	* initial code generated with kickstarter