@@ -1,3 +1,7 @@
+2012-03-23 Oliver Klee  <typo3-coding@oliverklee.de>
+
+	* Fix the single view link building to work with the latest seminars trunk
+
 2010-07-16 Oliver Klee  <typo3-coding@oliverklee.de>
 
 	* initial code generated with kickstarter
